--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
         <div class="hero-content">
             <h1 class="glowing-text">Welcome to Luminescent Network</h1>
             <p class="subtitle">Experience the ultimate Minecraft network</p>
+            <div class="countdown-section">
+                <p class="countdown-title">Luminescent Launch - Out of beta.</p>
+                <div class="countdown" id="countdown">
+                    <div class="countdown-item">
+                        <span class="countdown-value">0</span>
+                        <span class="countdown-label">w</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value">0</span>
+                        <span class="countdown-label">d</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value">0</span>
+                        <span class="countdown-label">h</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value">0</span>
+                        <span class="countdown-label">m</span>
+                    </div>
+                    <div class="countdown-item">
+                        <span class="countdown-value">0</span>
+                        <span class="countdown-label">s</span>
+                    </div>
+                </div>
+            </div>
             <div class="carousel-container">
         <div class="carousel">
             <img src="old web/home/1.png" alt="Image 1">
